--- a/index.html
+++ b/index.html
@@ -1,7 +1,8 @@
 ---
 layout: default
 ---
-
+<!DOCTYPE html>
+<link rel = "icon" href = "https://client.hczhizao.com/storage/long.png">
 <ul>
     {% for post in paginator.posts %}
       <li>
@@ -11,3 +12,4 @@ layout: default
       </li>
     {% endfor %}
 </ul>
+</html>
